[package]
name = "web-transport-iroh"
description = "WebTransport library for Iroh"
authors = ["Franz Heinzmann <frando@n0.computer>"]
repository = "https://github.com/kixelated/web-transport"
license = "MIT OR Apache-2.0"

version = "0.8.1"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "iroh"]
categories = ["network-programming", "web-programming"]

[dependencies]
bytes = "1"
http = "1"
iroh = "0.95"
# n0-error = "0.1.0"
n0-error = { git = "https://github.com/n0-computer/n0-error" }
n0-future = "0.3.1"
quinn = { package = "iroh-quinn", version = "0.14" }
quinn-proto = { package = "iroh-quinn-proto", version = "0.13" }
thiserror = "2"
tokio = { version = "1", default-features = false, features = [
    "io-util",
    "macros",
] }
tracing = "0.1.41"
url = "2"
web-transport-proto = "0.2.8"
web-transport-trait = "0.2.0"

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
