[package]
name = "web-transport-iroh"
description = "WebTransport library for Iroh"
authors = ["Franz Heinzmann <frando@n0.computer>"]
repository = "https://github.com/n0-computer/web-transport-iroh"
license = "MIT OR Apache-2.0"
version = "0.2.1"
edition = "2024"

keywords = ["quic", "http3", "webtransport", "iroh"]
categories = ["network-programming", "web-programming"]

[dependencies]
bytes = "1"
derive_more = { version = "2.1.1", features = ["debug"] }
http = "1"
iroh = "0.96.1"
n0-error = "0.1.2"
n0-future = "0.3.1"
tokio = { version = "1", default-features = false, features = [
    "io-util",
    "macros",
] }
tracing = "0.1.41"
url = "2"
web-transport-proto = "0.5.0"
web-transport-trait = "0.3.2"

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
n0-tracing-test = "0.3.0"
tokio = { version = "1", features = ["full"] }
